examples/test/testpolicy16627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16627
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key10: value12
      key0: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value7
          key11: value29
      podSelector:
        matchLabels:
          key18: value37
          key25: value36
